# Shams

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
agent/: Dockerfile  pyproject.toml  requirements.txt
agent/src/: agent.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/connection-details/: route.ts
nginx/: nginx.conf
nginx/ssl/: .gitkeep
